--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,16 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+
+
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
+    <ProgressBar android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:id="@+id/main_progress"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_on"
@@ -39,17 +46,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin"
         android:layout_marginBottom="85dp"
-        android:src="@android:drawable/stat_notify_sync_noanim" />
+        android:layout_marginRight="@dimen/fab_margin"
+        android:src="@android:drawable/stat_notify_sync_noanim">
+
+    </android.support.design.widget.FloatingActionButton>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_sort_rssi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin"
         android:layout_marginBottom="155dp"
+        android:layout_marginRight="@dimen/fab_margin"
         android:src="@android:drawable/ic_lock_idle_low_battery" />
 
     <android.support.design.widget.FloatingActionButton
@@ -57,8 +66,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin"
         android:layout_marginBottom="225dp"
+        android:layout_marginRight="@dimen/fab_margin"
         android:src="@android:drawable/ic_menu_sort_by_size" />
 
     <android.support.design.widget.FloatingActionButton
@@ -66,8 +75,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin"
         android:layout_marginBottom="295dp"
+        android:layout_marginRight="@dimen/fab_margin"
         android:src="@android:drawable/ic_menu_sort_alphabetically" />
+
 
 </android.support.design.widget.CoordinatorLayout>
