--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,15 +23,16 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
-
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
-    <ProgressBar android:layout_width="32dp"
+
+    <ProgressBar
+        android:id="@+id/main_progress"
+        android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_gravity="center"
-        android:indeterminate="true"
-        android:id="@+id/main_progress"/>
+        android:indeterminate="true" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_on"
@@ -39,6 +40,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:src="@android:drawable/stat_sys_data_bluetooth" />
 
     <android.support.design.widget.FloatingActionButton
@@ -48,7 +51,9 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="85dp"
         android:layout_marginRight="@dimen/fab_margin"
-        android:src="@android:drawable/stat_notify_sync_noanim">
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:src="@drawable/search_icon">
 
     </android.support.design.widget.FloatingActionButton>
 
@@ -59,6 +64,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="155dp"
         android:layout_marginRight="@dimen/fab_margin"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:src="@android:drawable/ic_lock_idle_low_battery" />
 
     <android.support.design.widget.FloatingActionButton
@@ -68,6 +75,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="225dp"
         android:layout_marginRight="@dimen/fab_margin"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:src="@android:drawable/ic_menu_sort_by_size" />
 
     <android.support.design.widget.FloatingActionButton
@@ -77,6 +86,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="295dp"
         android:layout_marginRight="@dimen/fab_margin"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:src="@android:drawable/ic_menu_sort_alphabetically" />
 
 
