--- a/app/src/main/res/layout/bluetooth_device_item.xml
+++ b/app/src/main/res/layout/bluetooth_device_item.xml
@@ -10,7 +10,9 @@
     app:cardCornerRadius="10dp"
     app:cardElevation="7dp"
     app:cardPreventCornerOverlap="false"
-    app:contentPadding="0dp">
+    app:contentPadding="0dp"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
