--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main_coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -25,17 +24,28 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <!--<include layout="@layout/content_main" />-->
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_on"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        android:src="@android:drawable/stat_sys_data_bluetooth" />
+        android:src="@android:drawable/stat_sys_data_bluetooth"
+        app:layout_anchor="@id/main_coordinatorLayout"
+        app:layout_anchorGravity="bottom|end" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_sync"
@@ -46,9 +56,7 @@
         android:layout_marginRight="@dimen/fab_margin"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        android:src="@drawable/search_icon">
-
-    </android.support.design.widget.FloatingActionButton>
+        android:src="@drawable/search_icon" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_sort_rssi"
