--- a/app/src/main/res/layout/bluetooth_device_item.xml
+++ b/app/src/main/res/layout/bluetooth_device_item.xml
@@ -7,12 +7,12 @@
     android:layout_gravity="center"
     android:layout_margin="5dp"
     android:background="@null"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="10dp"
     app:cardElevation="7dp"
     app:cardPreventCornerOverlap="false"
-    app:contentPadding="0dp"
-    android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground">
+    app:contentPadding="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -111,6 +111,12 @@
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
         </LinearLayout>
+
+        <ExpandableListView
+            android:id="@+id/gatt_services_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
