--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -5,6 +5,8 @@
 
     <ExpandableListView android:id="@+id/gatt_services_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"/>
 
 </LinearLayout>
