--- a/app/src/main/res/layout/detail_bluetooth_characteristics_item.xml
+++ b/app/src/main/res/layout/detail_bluetooth_characteristics_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="5dp"
     android:background="@null"
+    app:cardBackgroundColor="#ff8c00"
     app:cardCornerRadius="10dp"
     app:cardElevation="7dp"
     app:cardPreventCornerOverlap="false"
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="center_vertical">
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="20dp">
 
         <TextView
             android:id="@+id/detail_child_list_item_characteristics_title"
@@ -27,7 +28,8 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:text="detail_child_list_item_characteristics_title"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textColor="#fff" />
 
         <TextView
             android:id="@+id/detail_child_list_item_characteristics_UUID"
@@ -38,7 +40,8 @@
             android:layout_marginLeft="40dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:text="detail_child_list_item_characteristics_UUID" />
+            android:text="detail_child_list_item_characteristics_UUID"
+            android:textColor="#fff" />
 
         <TextView
             android:id="@+id/detail_child_list_item_characteristics_value"
@@ -49,7 +52,8 @@
             android:layout_marginLeft="40dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:text="detail_child_list_item_characteristics_value" />
+            android:text="detail_child_list_item_characteristics_value"
+            android:textColor="#fff" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
