--- a/app/src/main/res/layout/detail_bluetooth_service_item.xml
+++ b/app/src/main/res/layout/detail_bluetooth_service_item.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="5dp"
     android:background="@null"
+    app:cardBackgroundColor="@color/colorPrimaryDark"
     app:cardCornerRadius="10dp"
     app:cardElevation="7dp"
     app:cardPreventCornerOverlap="false"
@@ -14,40 +14,43 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center_vertical">
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="20dp"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="detail_parent_list_item_service_title"
             android:id="@+id/detail_parent_list_item_service_title"
-            android:textSize="20sp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp" />
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="detail_parent_list_item_service_UUID"
-            android:id="@+id/detail_parent_list_item_service_UUID"
             android:layout_gravity="center_vertical"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginTop="10dp"
+            android:text="detail_parent_list_item_service_title"
+            android:textSize="20sp"
+            android:textColor="#fff" />
+
+        <TextView
+            android:id="@+id/detail_parent_list_item_service_UUID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:text="detail_parent_list_item_service_UUID"
+            android:textColor="#fff" />
     </LinearLayout>
 
     <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/detail_parent_list_item_expand_arrow"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center|end"-->
-        <!--android:focusable="false"-->
-        <!--android:src="@drawable/ic_link"-->
-        <!--android:layout_margin="@dimen/fab_margin" />-->
+    <!--android:id="@+id/detail_parent_list_item_expand_arrow"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center|end"-->
+    <!--android:focusable="false"-->
+    <!--android:src="@drawable/ic_link"-->
+    <!--android:layout_margin="@dimen/fab_margin" />-->
 
 </android.support.v7.widget.CardView>
