--- a/app/src/main/res/layout/main_bluetooth_device_item.xml
+++ b/app/src/main/res/layout/main_bluetooth_device_item.xml
@@ -143,6 +143,7 @@
         android:layout_gravity="center|end"
         android:layout_margin="@dimen/fab_margin"
         android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground" />
+        android:foreground="?android:attr/selectableItemBackground"
+        android:src="@drawable/ic_link" />
 
 </android.support.v7.widget.CardView>
