2015-11-02 Scanner is done(without bug fix)

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,9 @@
         <item android:id="@+id/nav_scan"
             android:icon="@drawable/ic_menu"
             android:title="스캔"></item>
+        <item android:id="@+id/nav_nursing"
+            android:icon="@drawable/ic_menu"
+            android:title="샘플"></item>
     </group>
 
     <item android:title="HELP">
