--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#4169e1</color>
+    <color name="colorFab">#4169e1</color>
+
+    <color name="nursingPrimary">#607D8B</color>
+    <color name="nursingPrimary_dark">#455A64</color>
+    <color name="nursingPrimary_light">#CFD8DC</color>
+    <color name="accent">#8BC34A</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#727272</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#B6B6B6</color>
+
 </resources>
