--- a/app/src/main/res/layout/activity_nursing_main.xml
+++ b/app/src/main/res/layout/activity_nursing_main.xml
@@ -49,9 +49,9 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/nursing_viewpager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:foreground="?android:windowContentOverlay"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </android.support.design.widget.CoordinatorLayout>
 
