--- a/app/src/main/res/layout/fragmnet_nursing_dashboard_21.xml
+++ b/app/src/main/res/layout/fragmnet_nursing_dashboard_21.xml
@@ -43,7 +43,7 @@
                 android:layout_gravity="center_vertical|end"
                 android:background="@null"
                 android:src="@drawable/ic_link"
-                app:cb_color="#148cff"
+                app:cb_color="@color/accent"
                 app:cb_pressedRingWidth="8dip" />
         </android.support.v7.widget.CardView>
 
@@ -81,7 +81,7 @@
                         android:layout_centerVertical="true"
                         android:background="@null"
                         android:src="@drawable/ic_directions_walk_white_36dp"
-                        app:cb_color="#00d7ff"
+                        app:cb_color="@color/stepColor"
                         app:cb_pressedRingWidth="8dip" />
 
                     <TextView
@@ -132,7 +132,7 @@
                         android:layout_centerVertical="true"
                         android:background="@null"
                         android:src="@drawable/ic_link"
-                        app:cb_color="#ff5675"
+                        app:cb_color="@color/caloColor"
                         app:cb_pressedRingWidth="8dip" />
 
                     <TextView
@@ -191,7 +191,7 @@
                         android:layout_centerVertical="true"
                         android:background="@null"
                         android:src="@drawable/ic_link"
-                        app:cb_color="#b2fa5c"
+                        app:cb_color="@color/dirColor"
                         app:cb_pressedRingWidth="8dip" />
 
                     <TextView
@@ -242,7 +242,7 @@
                         android:layout_centerVertical="true"
                         android:background="@null"
                         android:src="@drawable/ic_link"
-                        app:cb_color="#fff650"
+                        app:cb_color="@color/etcColor"
                         app:cb_pressedRingWidth="8dip" />
 
                     <TextView
