--- a/app/src/main/res/layout/fragmnet_nursing_sample.xml
+++ b/app/src/main/res/layout/fragmnet_nursing_sample.xml
@@ -11,72 +11,133 @@
         android:background="@null"
         android:orientation="vertical">
 
+
+        <com.rainbow.kam.bt_scanner.Tools.Design.CircleCounter
+            android:id="@+id/counter"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="30dp"
+            app:metricSize="20sp"
+            app:metricText="metric"
+            app:range="60"
+            app:textColor="#000000"
+            app:textSize="100sp" />
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
             android:background="@null"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
-            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="15dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
-                app:rv_zoom="true">
+                app:cardCornerRadius="2dp"
+                app:cardElevation="7dp"
+                app:cardPreventCornerOverlap="false"
+                app:contentPadding="0dp">
 
-                <android.support.v7.widget.CardView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@null"
-                    app:cardCornerRadius="2dp"
-                    app:cardElevation="7dp"
-                    app:cardPreventCornerOverlap="false"
-                    app:contentPadding="0dp">
+                    android:orientation="horizontal">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@null">
+                    <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                        android:layout_width="64dip"
+                        android:layout_height="64dip"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:background="@null"
+                        android:src="@drawable/ic_directions_walk_white_36dp"
+                        app:cb_color="@color/stepColor"
+                        app:cb_pressedRingWidth="8dip" />
 
-                        <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
-                            android:layout_width="64dip"
-                            android:layout_height="64dip"
-                            android:layout_centerHorizontal="true"
-                            android:layout_centerVertical="true"
-                            android:background="@null"
-                            android:src="@drawable/ic_link"
-                            app:cb_color="#00d7ff"
-                            app:cb_pressedRingWidth="8dip" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="today" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentTop="true"
-                            android:layout_centerHorizontal="true"
-                            android:layout_margin="10dp"
-                            android:background="@null"
-                            android:text="STEP"
-                            android:textAppearance="?android:attr/textAppearanceMedium" />
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@null"
+                app:cardCornerRadius="2dp"
+                app:cardElevation="7dp"
+                app:cardPreventCornerOverlap="false"
+                app:contentPadding="0dp">
 
-                        <TextView
-                            android:id="@+id/dashboard_step"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_centerHorizontal="true"
-                            android:layout_margin="20dp"
-                            android:background="@null"
-                            android:textAppearance="?android:attr/textAppearanceLarge" />
-                    </RelativeLayout>
-                </android.support.v7.widget.CardView>
-            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:orientation="horizontal">
+
+                    <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                        android:layout_width="64dip"
+                        android:layout_height="64dip"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:background="@null"
+                        android:src="@drawable/ic_directions_walk_white_36dp"
+                        app:cb_color="@color/stepColor"
+                        app:cb_pressedRingWidth="8dip" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="yesterday" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@null"
+                app:cardCornerRadius="2dp"
+                app:cardElevation="7dp"
+                app:cardPreventCornerOverlap="false"
+                app:contentPadding="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:orientation="horizontal">
+
+                    <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                        android:layout_width="64dip"
+                        android:layout_height="64dip"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:background="@null"
+                        android:src="@drawable/ic_directions_walk_white_36dp"
+                        app:cb_color="@color/stepColor"
+                        app:cb_pressedRingWidth="8dip" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="GOAL" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
 
         </LinearLayout>
 
     </LinearLayout>
+
 </android.support.v4.widget.NestedScrollView>
