--- a/app/src/main/res/layout/fragmnet_nursing_main_step.xml
+++ b/app/src/main/res/layout/fragmnet_nursing_main_step.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null">
+<!--<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="@null">-->
 
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
@@ -19,7 +21,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="30dp"
             app:metricSize="20sp"
-            app:metricText="metric"
+            app:metricText="step"
             app:range="60"
             app:textColor="#ffffff"
             app:textSize="100sp" />
@@ -33,4 +35,4 @@
 
     </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+<!--</android.support.v4.widget.NestedScrollView>-->
