--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
+                android:layout_gravity="end|center_vertical"
                 android:layout_weight="0"
                 android:text="Peripheral:"
                 android:textColor="#666"
@@ -31,7 +31,7 @@
                 android:id="@+id/characteristic_device_name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1" />
 
@@ -46,7 +46,7 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_weight="0"
                 android:text="Address:"
                 android:textColor="#888"
@@ -56,7 +56,7 @@
                 android:id="@+id/characteristic_device_address"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginBottom="7dp"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
@@ -74,7 +74,7 @@
                 android:id="@+id/textView20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
+                android:layout_gravity="end|center_vertical"
                 android:layout_weight="0"
                 android:text="Service:"
                 android:textColor="#666"
@@ -84,7 +84,7 @@
                 android:id="@+id/characteristic_service_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1" />
 
@@ -99,7 +99,7 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_marginBottom="7dp"
                 android:layout_weight="0"
                 android:text="UUID:"
@@ -110,7 +110,7 @@
                 android:id="@+id/characteristic_service_uuid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:textColor="#888"
@@ -127,7 +127,7 @@
                 android:id="@+id/hr_text_view"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
+                android:layout_gravity="end|center_vertical"
                 android:layout_weight="0"
                 android:text="Characteristic:"
                 android:textColor="#666"
@@ -137,7 +137,7 @@
                 android:id="@+id/characteristic_detail_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1" />
 
@@ -152,7 +152,7 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_marginBottom="7dp"
                 android:layout_weight="0"
                 android:text="UUID:"
@@ -163,7 +163,7 @@
                 android:id="@+id/characteristic_detail_uuid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:textColor="#888"
@@ -180,7 +180,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
+                android:layout_gravity="end|center_vertical"
                 android:layout_weight="0"
                 android:text="Data Type:"
                 android:textColor="#666"
@@ -190,7 +190,7 @@
                 android:id="@+id/characteristic_detail_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1" />
 
@@ -205,7 +205,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
+                android:layout_gravity="end|center_vertical"
                 android:layout_weight="0"
                 android:text="Properties:"
                 android:textColor="#666"
@@ -215,7 +215,7 @@
                 android:id="@+id/characteristic_detail_properties"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1" />
 
@@ -277,7 +277,7 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
+                android:layout_gravity="end|center_vertical"
                 android:layout_weight="0"
                 android:text="String:"
                 android:textColor="#888"
@@ -301,7 +301,7 @@
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
+                android:layout_gravity="end|center_vertical"
                 android:text="Decimal:"
                 android:textColor="#888"
                 android:textSize="10sp" />
@@ -324,7 +324,7 @@
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
+                android:layout_gravity="end|center_vertical"
                 android:layout_weight="0"
                 android:text="Updated:"
                 android:textColor="#888"
