--- a/app/src/main/res/layout/fragment_nursing_start_adduser.xml
+++ b/app/src/main/res/layout/fragment_nursing_start_adduser.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@null">
@@ -81,28 +82,54 @@
         </android.support.design.widget.TextInputLayout>
 
         <RadioGroup
+            android:id="@+id/gender_group"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
             android:layout_margin="20dp"
             android:divider="@color/colorAccent"
-            android:id="@+id/gender_group">
+            android:orientation="horizontal">
 
             <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Man"
-                android:checked="true"
                 android:id="@+id/radio_man"
-                android:layout_weight="1" />
-
-            <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="woman"
+                android:layout_weight="1"
+                android:checked="true"
+                android:text="Man" />
+
+            <RadioButton
                 android:id="@+id/radio_woman"
-                android:layout_weight="1" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="woman" />
         </RadioGroup>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="50dp"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="7dp"
+            app:cardPreventCornerOverlap="false"
+            app:contentPadding="0dp">
+
+            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+                android:id="@+id/nursing_adduser_skip"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:background="@null"
+                app:rv_zoom="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="Skip"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 </ScrollView>
