--- a/app/src/main/res/layout/dashboard_data_item.xml
+++ b/app/src/main/res/layout/dashboard_data_item.xml
@@ -16,7 +16,7 @@
         android:background="@null"
         android:orientation="horizontal">
 
-        <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+        <com.rainbow.kam.bt_scanner.tools.design.CircleButton
             android:layout_width="64dip"
             android:layout_height="64dip"
             android:layout_centerHorizontal="true"
