--- a/app/src/main/res/layout/fragment_nursing_start_adduser.xml
+++ b/app/src/main/res/layout/fragment_nursing_start_adduser.xml
@@ -114,7 +114,7 @@
             app:cardPreventCornerOverlap="false"
             app:contentPadding="0dp">
 
-            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+            <com.rainbow.kam.bt_scanner.tools.design.RippleView
                 android:id="@+id/nursing_adduser_skip"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -128,7 +128,7 @@
                     android:layout_margin="10dp"
                     android:text="Skip"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
-            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+            </com.rainbow.kam.bt_scanner.tools.design.RippleView>
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
