--- a/app/src/main/res/layout/activity_nursing_main.xml
+++ b/app/src/main/res/layout/activity_nursing_main.xml
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabGravity="center"
-                app:tabMode="scrollable"></android.support.design.widget.TabLayout>
+                app:tabMode="scrollable"/>
 
 
         </android.support.design.widget.AppBarLayout>
