--- a/app/src/main/res/layout/fragmnet_nursing_main_dashboard.xml
+++ b/app/src/main/res/layout/fragmnet_nursing_main_dashboard.xml
@@ -11,7 +11,7 @@
         android:background="@null"
         android:orientation="vertical">
 
-        <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+        <com.rainbow.kam.bt_scanner.tools.Design.RippleView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -41,7 +41,7 @@
                     android:background="@null"
                     android:text="Device Time" />
 
-                <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                <com.rainbow.kam.bt_scanner.tools.Design.CircleButton
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_centerHorizontal="true"
@@ -52,7 +52,7 @@
                     app:cb_color="@color/accent"
                     app:cb_pressedRingWidth="8dip" />
             </android.support.v7.widget.CardView>
-        </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+        </com.rainbow.kam.bt_scanner.tools.Design.RippleView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,7 +62,7 @@
             android:background="@null"
             android:orientation="horizontal">
 
-            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+            <com.rainbow.kam.bt_scanner.tools.Design.RippleView
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_gravity="center_vertical"
@@ -86,7 +86,7 @@
                         android:layout_weight="1"
                         android:background="@null">
 
-                        <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                        <com.rainbow.kam.bt_scanner.tools.Design.CircleButton
                             android:layout_width="64dip"
                             android:layout_height="64dip"
                             android:layout_centerHorizontal="true"
@@ -117,9 +117,9 @@
                             android:textAppearance="?android:attr/textAppearanceLarge" />
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
-            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+            </com.rainbow.kam.bt_scanner.tools.Design.RippleView>
 
-            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+            <com.rainbow.kam.bt_scanner.tools.Design.RippleView
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_gravity="center_vertical"
@@ -143,7 +143,7 @@
                         android:layout_weight="1"
                         android:background="@null">
 
-                        <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                        <com.rainbow.kam.bt_scanner.tools.Design.CircleButton
                             android:layout_width="64dip"
                             android:layout_height="64dip"
                             android:layout_centerHorizontal="true"
@@ -174,7 +174,7 @@
                             android:textAppearance="?android:attr/textAppearanceLarge" />
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
-            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+            </com.rainbow.kam.bt_scanner.tools.Design.RippleView>
         </LinearLayout>
 
         <LinearLayout
@@ -184,7 +184,7 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+            <com.rainbow.kam.bt_scanner.tools.Design.RippleView
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_gravity="center_vertical"
@@ -208,7 +208,7 @@
                         android:layout_weight="1"
                         android:background="@null">
 
-                        <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                        <com.rainbow.kam.bt_scanner.tools.Design.CircleButton
                             android:layout_width="64dip"
                             android:layout_height="64dip"
                             android:layout_centerHorizontal="true"
@@ -239,9 +239,9 @@
                             android:textAppearance="?android:attr/textAppearanceLarge" />
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
-            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+            </com.rainbow.kam.bt_scanner.tools.Design.RippleView>
 
-            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+            <com.rainbow.kam.bt_scanner.tools.Design.RippleView
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_gravity="center_vertical"
@@ -265,7 +265,7 @@
                         android:layout_weight="1"
                         android:background="@null">
 
-                        <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                        <com.rainbow.kam.bt_scanner.tools.Design.CircleButton
                             android:layout_width="64dip"
                             android:layout_height="64dip"
                             android:layout_centerHorizontal="true"
@@ -296,7 +296,7 @@
                             android:textAppearance="?android:attr/textAppearanceLarge" />
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
-            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+            </com.rainbow.kam.bt_scanner.tools.Design.RippleView>
         </LinearLayout>
 
     </LinearLayout>
