--- a/app/src/main/res/layout/fragmnet_nursing_main_step.xml
+++ b/app/src/main/res/layout/fragmnet_nursing_main_step.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
 
-        <com.rainbow.kam.bt_scanner.Tools.Design.CircleCounter
+        <com.rainbow.kam.bt_scanner.tools.Design.CircleCounter
             android:id="@+id/step_counter"
             android:layout_width="300dp"
             android:layout_height="300dp"
