--- a/app/src/main/res/layout/fragment_nursing_splash_adduser.xml
+++ b/app/src/main/res/layout/fragment_nursing_splash_adduser.xml
@@ -131,5 +131,13 @@
             </com.rainbow.kam.bt_scanner.tools.design.RippleView>
         </android.support.v7.widget.CardView>
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/nursing_next_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_launcher_arrow_next"
+            app:backgroundTint="@color/accent" />
     </LinearLayout>
 </ScrollView>
